/*
SPDX-FileCopyrightText: 2020-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: LicenseRef-ONF-Member-1.0
*/
syntax = "proto3";

import "RICactionType.proto";
import "RICsubsequentAction.proto";

package e2ctypes;

message RICaction_ToBeSetup_Item_t {
    option deprecated = true;
    int64 ricActionID = 1;
    RICactionType_t ricActionType = 2;
    string ricActionDefinition = 3; /* OPTIONAL */
    RICsubsequentAction_t ricSubsequentAction = 4; /* OPTIONAL */
}
